--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest",
+    "test:component": "vitest",
     "test:component:watch": "vitest --watch",
     "test:e2e:open": "cypress open",
     "test:e2e:run": "cypress run"
